syntax = "proto3";

package chocolateygui.rpc;
option csharp_namespace = "ChocolateyGui.Rpc";

import "google/protobuf/Timestamp.proto";

message Package {
    string Id = 1;
    string Title = 2;
    string Version = 3;
    string Description = 4;
    string ReleaseNotes = 5;
    string IconUrl = 6;
    repeated string Authors = 7;
    repeated string Owners = 8;
    google.protobuf.Timestamp PublishedEncoded = 9;
    string Summary = 10;
    string Tags = 11;
    int32 DownloadCount = 12;
    int32 VersionDownloadCount = 13;
    string Dependencies = 14;
    string Copyright = 15;
    string GalleryDetailsUrl = 16;
    string LicenseUrl = 17;
    string ProjectUrl = 18;
    string ReportAbuseUrl = 19;
    bool IsInstalled = 20;
    bool IsPinned = 21;
    bool IsLatestVersion = 22;
    bool IsAbsoluteLatestVersion = 23;
    bool IsPrerelease = 24;
    string Language = 25;
    string LatestVersion = 26;
    string PackageHash = 27;
    string PackageHashAlgorithm = 28;
    int64 PackageSize = 29;
    string RequireLicenseAcceptance = 30;
    string Source = 31;
}

message ChocolateyFeature {
	string Name = 1;
	bool Enabled = 2;
	bool SetExplicitly = 3;
	string Description = 4;
}

message ChocolateySetting {
    string Key = 1;
    string Value = 2;
    string Description = 3;
}

message ChocolateySource {
    string Id = 1;
    string Value = 2;
    bool Disabled = 3;
    string UserName = 4;
    string Password = 5;
    int32 Priority = 6;
    string Certificate = 7;
    string CertificatePassword = 8;
}